# araras

./: .gitignore  .pypirc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  commons.py  docgen.py  pypi.md  pyproject.toml
.github/workflows/: package-check.yml  publish-test.yml  publish.yml
docs/: API Documentation.md  API_Docs.md  API_Documentation.md  TODO.md  USAGE.md  generate_api_docs.py  howto.md  issue-log2.md  monitoring_guide.md  tips.md  wiki.md
email/: utils.py
examples/: optuna_viz_example.py
keras/: hparams.py
keras/builders/: cnn.py  dnn.py  lstm.py  tcnn.py
keras/utils/: profiler.py  summary.py
kernel/: _monitor_kernel_life.py  headless_monitoring.py  monitoring.py  restarting_monitoring.py  terminal_monitoring.py
legacy/: backup.py  legacy_skip_connections.py  legacy_stats.py  test_new_version_stats.py
optuna/: analyze.py  utils.py
plot/: configs.py
scripts/: generate_api_docs.py
src/: TODO.md  _imports.py  nas_optuna.ipynb  test_monitor.py
src/araras/: __init__.py  commons.py  core.py
src/araras/email/: utils.py
src/araras/keras/: callbacks.py  hparams.py  hyperparams.py  skip_connections.py  training.py  utils.py
src/araras/kernel/: consolidated_email_manager.py  constants.py  email_manager.py  file_type_handler.py  flag_based_restart_manager.py  guide.md  monitoring.py  print_utils.py  prints.py  process_monitor.py  restart_manager.py  templates.py
src/araras/ml/: __init__.py
src/araras/notifications/: __init__.py  email.py
src/araras/optuna/: __init__.py  analyze.py  callbacks.py  describe_numeric.py  plot_contour.py  plot_edf.py  plot_hyperparameter_distributions.py  plot_intermediate_values.py  plot_optimal_ranges_analysis.py  plot_optimization_history.py  plot_parallel_coordinate.py  plot_param_importances.py  plot_parameter_boxplots.py  plot_rank.py  plot_slice.py  plot_spearman_correlation.py  plot_terminator_improvement.py  plot_timeline.py  plot_trend_analysis.py  utils.py
src/araras/plot/: configs.py
src/araras/runtime/: __init__.py  _monitor_script.py  cleanup.py  email_manager.py  file_handler.py  monitoring.py  restart_manager.py  terminal.py
src/araras/tensorflow/: model.py
src/araras/utils/: __init__.py  cleanup.py  dir.py  files.py  gpu.py  io.py  loading_bar.py  logs.py  misc.py  progress.py  resource_monitor.py  system.py  terminal.py  verbose_printer.py
src/araras/visualization/: __init__.py  configs.py
src/araras/viz/: __init__.py  reporter.py
src/araras_old/: model_utils.py  study_utils.py
src/examples/: graph_with_zoom.ipynb  tex_images.py
src/tests/: helpers.py  test__cleanup_stale_monitor_files.py  test__get_nvidia_smi_data.py  test__print_gpu_table.py  test__print_memory_summary.py  test__print_tensorflow_info.py  test_analyze_study.py  test_build_cnn1d.py  test_build_cnn2d.py  test_build_cnn3d.py  test_build_dense_as_conv1d.py  test_build_dense_as_conv2d.py  test_build_dense_as_conv3d.py  test_build_dnn.py  test_build_lstm.py  test_build_squeeze_excite_1d.py  test_build_tcnn1d.py  test_build_tcnn2d.py  test_build_tcnn3d.py  test_capture_model_summary.py  test_check_crash_signal.py  test_classify_columns.py  test_cleanup_non_top_trials.py  test_clear.py  test_compute_flops_penalized_loss.py  test_compute_params_penalized_loss.py  test_config_plt.py  test_create_directories.py  test_create_frequency_table.py  test_create_run_directory.py  test_describe_numeric.py  test_format_bytes.py  test_format_number.py  test_format_number_commas.py  test_format_numeric_value.py  test_format_scientific.py  test_format_title.py  test_get_credentials.py  test_get_flops.py  test_get_gpu_info.py  (+43 more)
src/utils/: dataset_analysis.ipynb  matplotlib_configs.py
tensorflow/utils/: model.py
tests/: check_araras.py  check_tf_cuda_cudnn.py  estimate_training_memory_demo.py  test_callbacks_model.py  test_imports.py  test_measure_usage.py  test_penalized_loss.py  test_save_model_plot.py
utils/: files.py  gpu.py  logs.py  misc.py  terminal.py
venvs/: tf-gpu.sh  tf-optuna.yaml  ultralytics.yaml
(+104 files in other folders)
