[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "araras"
version = "1.0.0"
description = "A collection of tools for Machine Learning and Data Science"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [
  { name = "Matheus Ferreira Silva", email = "matheusferreiravga@gmail.com" },
]
dependencies = [
  "tensorflow>=2.0.0",
  "optuna>=3.0.0",
  "numpy>=1.20.0",
  "matplotlib>=3.5.0",
  "cycler>=0.11.0",
  "scikit-learn>=1.0.0",
  "psutil>=5.8.0",
  "scipy>=1.7.0",
  "pandas>=1.2.0",
  "ipython>=7.0.0",
  "rich>=10.0.0",
  # "pretty_errors>=1.2.0",
  "nbformat>=5.0.0",
  "plotly>=5.0.0",
  "cmaes>=0.8.0",
  "torch>=1.9.0",
  "rich>=13.0.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["araras*"]
