[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "araras"
version = "1.0.1"
description = "A collection of tools for Machine Learning and Data Science"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Matheus Ferreira Silva", email = "matheusferreiravga@gmail.com" },
]
dependencies = [
  "numpy>=1.20.0",
  "matplotlib>=3.5.0",
  "cycler>=0.11.0",
  "scikit-learn>=1.0.0",
  "psutil>=5.8.0",
  "scipy>=1.7.0",
  "pandas>=1.2.0",
  "tabulate>=0.9.0",
  "tqdm>=4.0.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
tensorflow = [
  "tensorflow[and-cuda]>=2.18.0",
  "optuna>=4.1.0",
  "optuna-integration>=4.3.0",
  "optunahub>=0.3.1",
  "cmaes>=0.8.0",
  "pynvml>=11.4.1",
]
torch = [
  "optuna>=4.1.0",
  "torch>=1.9.0",
  "torchinfo>=1.8.0",
  "torchviz>=0.0.2",
]
viz = [
  "plotly>=5.0.0",
  "pydot>=1.2.2",
]
notebook = [
  "ipython>=7.0.0",
  "nbformat>=5.0.0",
  "ipynbname>=2021.3.1",
]
gnn = [
  "spektral>=1.3.0",
]
dev = [
  "build",
  "twine",
]
all = [
  "tensorflow[and-cuda]>=2.18.0",
  "optuna>=4.1.0",
  "optuna-integration>=4.3.0",
  "optunahub>=0.3.1",
  "cmaes>=0.8.0",
  "pynvml>=11.4.1",
  "torch>=1.9.0",
  "torchinfo>=1.8.0",
  "torchviz>=0.0.2",
  "plotly>=5.0.0",
  "pydot>=1.2.2",
  "ipython>=7.0.0",
  "nbformat>=5.0.0",
  "ipynbname>=2021.3.1",
  "spektral>=1.3.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["araras*"]

[project.scripts]
monitor = "araras.runtime._monitor_script:main"
